--- a/WeatherService/pom.xml
+++ b/WeatherService/pom.xml
@@ -19,6 +19,13 @@
     </properties>
 
     <dependencies>
+        <!-- Front issue -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
